feat: check installed app images directly in Docker registries
